# AssessmentCentre

./: .env.example  .gitignore  DESIGN-BRIEF.md  README.md  compose.local.yaml  compose.yaml  platform_build_spec.md  start.bat  stop.bat
backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_content_library_and_spend.py  0003_nda_acceptance.py  0004_content_description.py  0005_drop_candidate_spend.py  0006_question_answer_seen.py
backend/app/: audit.py  candidate_ids.py  config.py  config_helpers.py  content_access.py  content_manifest.py  content_storage.py  cost_api.py  db.py  deps.py  main.py  models.py  prep_window.py  rate_limit.py  schemas.py  security.py  seed.py
backend/app/routers/: admin.py  admin_content.py  auth.py  booking.py  candidate_key.py  content.py  nda.py  public.py  qa.py  slots.py
backend/content/: MANIFEST.md
backend/tests/: conftest.py  test_activity.py  test_admin_accounts.py  test_admin_auth.py  test_apikey.py  test_apikey_last4.py  test_assessment_info.py  test_audit.py  test_booking.py  test_candidate_delete.py  test_candidate_flow.py  test_candidate_ids.py  test_config_admin.py  test_content.py  test_content_access.py  test_migrations.py  test_models.py  test_nda.py  test_notifications.py  test_prep_window.py  test_profile.py  test_purge.py  test_qa.py  test_rate_limit.py  test_security.py  test_seed_admins.py  test_setpassword_returns_id.py  test_slots.py  test_spend.py
caddy/: Caddyfile
docs/: candidate-connection-help.md
frontend/: index.html  (+3 more)
(+33 files in other folders)
