[project]
name = "assessment-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.2",
    "passlib[bcrypt]>=1.7",
    "bcrypt<4.1",
    "cryptography>=42.0",
    "itsdangerous>=2.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]
"alembic/env.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Silence the benign Starlette TestClient deprecation (it asks for httpx2, which
# we are intentionally not adopting mid-build). Scoped to this exact message.
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:Warning",
    "ignore:'crypt' is deprecated and slated for removal:DeprecationWarning",
]
